[gd_scene load_steps=8 format=3 uid="uid://k22lgew0injk"]

[ext_resource type="PackedScene" uid="uid://mv1feekn71ll" path="res://scenes/unit.tscn" id="1_iafer"]
[ext_resource type="Script" uid="uid://bi3x3domjt1wv" path="res://scenes/players/player.gd" id="2_tfyga"]
[ext_resource type="Resource" uid="uid://bifn66nl1ty71" path="res://resources/units/players/stats_player_well_rounde.tres" id="3_8jcil"]
[ext_resource type="Texture2D" uid="uid://cproxhccob85g" path="res://assets/sprites/Players/Player_1.png" id="3_ocm74"]
[ext_resource type="Script" uid="uid://4g0qgf12ebm0" path="res://scenes/players/trail.gd" id="4_8jcil"]

[sub_resource type="Curve" id="Curve_s4bbk"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_8jcil"]
radius = 34.0147

[node name="PlayerWellRounded" instance=ExtResource("1_iafer")]
collision_mask = 2
script = ExtResource("2_tfyga")
stats = ExtResource("3_8jcil")

[node name="Trail" type="Line2D" parent="Visuals" index="0" node_paths=PackedStringArray("player")]
top_level = true
position = Vector2(0, -32)
width = 50.1
width_curve = SubResource("Curve_s4bbk")
script = ExtResource("4_8jcil")
player = NodePath("../..")

[node name="TrailTimer" type="Timer" parent="Visuals/Trail" index="0"]
unique_name_in_owner = true
one_shot = true

[node name="Shadow" parent="Visuals" index="1"]
z_index = 1

[node name="Sprite" parent="Visuals" index="2"]
z_index = 1
texture = ExtResource("3_ocm74")

[node name="DashTimer" type="Timer" parent="." index="2"]
one_shot = true

[node name="DashCooldDownTimer" type="Timer" parent="." index="3"]
one_shot = true

[node name="HurtboxComponent" parent="." index="5"]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" parent="HurtboxComponent" index="0"]
z_index = 1
position = Vector2(0, -32)
shape = SubResource("CircleShape2D_8jcil")
debug_color = Color(0.9468488, 0.19346029, 0.33492053, 0.41960785)

[node name="HealthBar" parent="." index="7"]
back_color = Color(0.13725491, 0.019607844, 0.02745098, 1)
fill_color = Color(1, 0.2901961, 0.45490196, 1)

[node name="FlashTimer" type="Timer" parent="." index="8"]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="Visuals/Trail/TrailTimer" to="Visuals/Trail" method="_on_trail_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
